--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1382,8 +1382,467 @@ body {
     flex: auto!important;
   }
 }
-.cid-riEkKRuGDH {
+.cid-rjjr3ekGlN {
   padding-top: 90px;
   padding-bottom: 90px;
-  background-image: url("../../../assets/images/mbr-1920x1373.jpg");
+  background-image: url("../../../assets/images/mbr-1920x1335.jpg");
+}
+.cid-rjjr6Uh5qp {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #ffffff;
+}
+.cid-rjjr6Uh5qp .line {
+  background-color: #149dcc;
+  color: #149dcc;
+  align: center;
+  height: 2px;
+  margin: 0 auto;
+}
+.cid-rjjr6Uh5qp .section-text {
+  padding: 2rem 0;
+  color: #0f7699;
+}
+.cid-rjjr6Uh5qp .inner-container {
+  margin: 0 auto;
+}
+@media (max-width: 768px) {
+  .cid-rjjr6Uh5qp .inner-container {
+    width: 100% !important;
+  }
+}
+.cid-rjjr6Uh5qp .section-text B {
+  color: #ff3366;
+}
+.cid-rjjr8lKhok {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #efefef;
+}
+.cid-rjjr8lKhok .card-box {
+  padding: 0 2rem;
+}
+.cid-rjjr8lKhok .mbr-section-btn {
+  padding-top: 1rem;
+}
+.cid-rjjr8lKhok .mbr-section-btn a {
+  margin-top: 1rem;
+  margin-bottom: 0;
+}
+.cid-rjjr8lKhok h4 {
+  font-weight: 500;
+  margin-bottom: 0;
+  text-align: left;
+  padding-top: 2rem;
+}
+.cid-rjjr8lKhok p {
+  margin-bottom: 0;
+  text-align: left;
+  padding-top: 1.5rem;
+}
+.cid-rjjr8lKhok .mbr-text {
+  color: #767676;
+}
+.cid-rjjr8lKhok .card-wrapper {
+  height: 100%;
+  padding-bottom: 2rem;
+  background: #ffffff;
+  box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0);
+  transition: box-shadow 0.3s;
+}
+.cid-rjjr8lKhok .card-wrapper:hover {
+  box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.05);
+  transition: box-shadow 0.3s;
+}
+.cid-rjjqWfQKvu .navbar {
+  background: #ffffff;
+  transition: none;
+  min-height: 77px;
+  padding: .5rem 0;
+}
+.cid-rjjqWfQKvu .navbar-dropdown.bg-color.transparent.opened {
+  background: #ffffff;
+}
+.cid-rjjqWfQKvu a {
+  font-style: normal;
+}
+.cid-rjjqWfQKvu .nav-item span {
+  padding-right: 0.4em;
+  line-height: 0.5em;
+  vertical-align: text-bottom;
+  position: relative;
+  text-decoration: none;
+}
+.cid-rjjqWfQKvu .nav-item a {
+  display: -webkit-flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0.7rem 0 !important;
+  margin: 0rem .65rem !important;
+  -webkit-align-items: center;
+  -webkit-justify-content: center;
+}
+.cid-rjjqWfQKvu .nav-item:focus,
+.cid-rjjqWfQKvu .nav-link:focus {
+  outline: none;
+}
+.cid-rjjqWfQKvu .btn {
+  padding: 0.4rem 1.5rem;
+  display: -webkit-inline-flex;
+  align-items: center;
+  -webkit-align-items: center;
+}
+.cid-rjjqWfQKvu .btn .mbr-iconfont {
+  font-size: 1.6rem;
+}
+.cid-rjjqWfQKvu .menu-logo {
+  margin-right: auto;
+}
+.cid-rjjqWfQKvu .menu-logo .navbar-brand {
+  display: flex;
+  margin-left: 5rem;
+  padding: 0;
+  transition: padding .2s;
+  min-height: 3.8rem;
+  -webkit-align-items: center;
+  align-items: center;
+}
+.cid-rjjqWfQKvu .menu-logo .navbar-brand .navbar-caption-wrap {
+  display: flex;
+  -webkit-align-items: center;
+  align-items: center;
+  word-break: break-word;
+  min-width: 7rem;
+  margin: .3rem 0;
+}
+.cid-rjjqWfQKvu .menu-logo .navbar-brand .navbar-caption-wrap .navbar-caption {
+  line-height: 1.2rem !important;
+  padding-right: 2rem;
+}
+.cid-rjjqWfQKvu .menu-logo .navbar-brand .navbar-logo {
+  font-size: 4rem;
+  transition: font-size 0.25s;
+}
+.cid-rjjqWfQKvu .menu-logo .navbar-brand .navbar-logo img {
+  display: flex;
+}
+.cid-rjjqWfQKvu .menu-logo .navbar-brand .navbar-logo .mbr-iconfont {
+  transition: font-size 0.25s;
+}
+.cid-rjjqWfQKvu .menu-logo .navbar-brand .navbar-logo a {
+  display: inline-flex;
+}
+.cid-rjjqWfQKvu .navbar-toggleable-sm .navbar-collapse {
+  justify-content: flex-end;
+  -webkit-justify-content: flex-end;
+  padding-right: 5rem;
+  width: auto;
+}
+.cid-rjjqWfQKvu .navbar-toggleable-sm .navbar-collapse .navbar-nav {
+  flex-wrap: wrap;
+  -webkit-flex-wrap: wrap;
+  padding-left: 0;
+}
+.cid-rjjqWfQKvu .navbar-toggleable-sm .navbar-collapse .navbar-nav .nav-item {
+  -webkit-align-self: center;
+  align-self: center;
+}
+.cid-rjjqWfQKvu .navbar-toggleable-sm .navbar-collapse .navbar-buttons {
+  padding-left: 0;
+  padding-bottom: 0;
+}
+.cid-rjjqWfQKvu .dropdown .dropdown-menu {
+  background: #ffffff;
+  display: none;
+  position: absolute;
+  min-width: 5rem;
+  padding-top: 1.4rem;
+  padding-bottom: 1.4rem;
+  text-align: left;
+}
+.cid-rjjqWfQKvu .dropdown .dropdown-menu .dropdown-item {
+  width: auto;
+  padding: 0.235em 1.5385em 0.235em 1.5385em !important;
+}
+.cid-rjjqWfQKvu .dropdown .dropdown-menu .dropdown-item::after {
+  right: 0.5rem;
+}
+.cid-rjjqWfQKvu .dropdown .dropdown-menu .dropdown-submenu {
+  margin: 0;
+}
+.cid-rjjqWfQKvu .dropdown.open > .dropdown-menu {
+  display: block;
+}
+.cid-rjjqWfQKvu .navbar-toggleable-sm.opened:after {
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  content: '';
+  background-color: rgba(0, 0, 0, 0.1);
+  left: 0;
+  bottom: 0;
+  transform: translateY(100%);
+  -webkit-transform: translateY(100%);
+  z-index: 1000;
+}
+.cid-rjjqWfQKvu .navbar.navbar-short {
+  min-height: 60px;
+  transition: all .2s;
+}
+.cid-rjjqWfQKvu .navbar.navbar-short .navbar-toggler-right {
+  top: 20px;
+}
+.cid-rjjqWfQKvu .navbar.navbar-short .navbar-logo a {
+  font-size: 2.5rem !important;
+  line-height: 2.5rem;
+  transition: font-size 0.25s;
+}
+.cid-rjjqWfQKvu .navbar.navbar-short .navbar-logo a .mbr-iconfont {
+  font-size: 2.5rem !important;
+}
+.cid-rjjqWfQKvu .navbar.navbar-short .navbar-logo a img {
+  height: 3rem !important;
+}
+.cid-rjjqWfQKvu .navbar.navbar-short .navbar-brand {
+  min-height: 3rem;
+}
+.cid-rjjqWfQKvu button.navbar-toggler {
+  width: 31px;
+  height: 18px;
+  cursor: pointer;
+  transition: all .2s;
+  top: 1.5rem;
+  right: 1rem;
+}
+.cid-rjjqWfQKvu button.navbar-toggler:focus {
+  outline: none;
+}
+.cid-rjjqWfQKvu button.navbar-toggler .hamburger span {
+  position: absolute;
+  right: 0;
+  width: 30px;
+  height: 2px;
+  border-right: 5px;
+  background-color: #333333;
+}
+.cid-rjjqWfQKvu button.navbar-toggler .hamburger span:nth-child(1) {
+  top: 0;
+  transition: all .2s;
+}
+.cid-rjjqWfQKvu button.navbar-toggler .hamburger span:nth-child(2) {
+  top: 8px;
+  transition: all .15s;
+}
+.cid-rjjqWfQKvu button.navbar-toggler .hamburger span:nth-child(3) {
+  top: 8px;
+  transition: all .15s;
+}
+.cid-rjjqWfQKvu button.navbar-toggler .hamburger span:nth-child(4) {
+  top: 16px;
+  transition: all .2s;
+}
+.cid-rjjqWfQKvu nav.opened .hamburger span:nth-child(1) {
+  top: 8px;
+  width: 0;
+  opacity: 0;
+  right: 50%;
+  transition: all .2s;
+}
+.cid-rjjqWfQKvu nav.opened .hamburger span:nth-child(2) {
+  -webkit-transform: rotate(45deg);
+  transform: rotate(45deg);
+  transition: all .25s;
+}
+.cid-rjjqWfQKvu nav.opened .hamburger span:nth-child(3) {
+  -webkit-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+  transition: all .25s;
+}
+.cid-rjjqWfQKvu nav.opened .hamburger span:nth-child(4) {
+  top: 8px;
+  width: 0;
+  opacity: 0;
+  right: 50%;
+  transition: all .2s;
+}
+.cid-rjjqWfQKvu .collapsed.navbar-expand {
+  flex-direction: column;
+  -webkit-flex-direction: column;
+}
+.cid-rjjqWfQKvu .collapsed .btn {
+  display: -webkit-flex;
+}
+.cid-rjjqWfQKvu .collapsed .navbar-collapse {
+  display: none !important;
+  padding-right: 0 !important;
+}
+.cid-rjjqWfQKvu .collapsed .navbar-collapse.collapsing,
+.cid-rjjqWfQKvu .collapsed .navbar-collapse.show {
+  display: block !important;
+}
+.cid-rjjqWfQKvu .collapsed .navbar-collapse.collapsing .navbar-nav,
+.cid-rjjqWfQKvu .collapsed .navbar-collapse.show .navbar-nav {
+  display: block;
+  text-align: center;
+}
+.cid-rjjqWfQKvu .collapsed .navbar-collapse.collapsing .navbar-nav .nav-item,
+.cid-rjjqWfQKvu .collapsed .navbar-collapse.show .navbar-nav .nav-item {
+  clear: both;
+}
+.cid-rjjqWfQKvu .collapsed .navbar-collapse.collapsing .navbar-buttons,
+.cid-rjjqWfQKvu .collapsed .navbar-collapse.show .navbar-buttons {
+  text-align: center;
+}
+.cid-rjjqWfQKvu .collapsed .navbar-collapse.collapsing .navbar-buttons:last-child,
+.cid-rjjqWfQKvu .collapsed .navbar-collapse.show .navbar-buttons:last-child {
+  margin-bottom: 1rem;
+}
+.cid-rjjqWfQKvu .collapsed button.navbar-toggler {
+  display: block;
+}
+.cid-rjjqWfQKvu .collapsed .navbar-brand {
+  margin-left: 1rem !important;
+}
+.cid-rjjqWfQKvu .collapsed .navbar-toggleable-sm {
+  flex-direction: column;
+  -webkit-flex-direction: column;
+}
+.cid-rjjqWfQKvu .collapsed .dropdown .dropdown-menu {
+  width: 100%;
+  text-align: center;
+  position: relative;
+  opacity: 0;
+  display: block;
+  height: 0;
+  visibility: hidden;
+  padding: 0;
+  transition-duration: .5s;
+  transition-property: opacity,padding,height;
+}
+.cid-rjjqWfQKvu .collapsed .dropdown.open > .dropdown-menu {
+  position: relative;
+  opacity: 1;
+  height: auto;
+  padding: 1.4rem 0;
+  visibility: visible;
+}
+.cid-rjjqWfQKvu .collapsed .dropdown .dropdown-submenu {
+  left: 0;
+  text-align: center;
+  width: 100%;
+}
+.cid-rjjqWfQKvu .collapsed .dropdown .dropdown-toggle[data-toggle="dropdown-submenu"]::after {
+  margin-top: 0;
+  position: inherit;
+  right: 0;
+  top: 50%;
+  display: inline-block;
+  width: 0;
+  height: 0;
+  margin-left: .3em;
+  vertical-align: middle;
+  content: "";
+  border-top: .30em solid;
+  border-right: .30em solid transparent;
+  border-left: .30em solid transparent;
+}
+@media (max-width: 991px) {
+  .cid-rjjqWfQKvu.navbar-expand {
+    flex-direction: column;
+    -webkit-flex-direction: column;
+  }
+  .cid-rjjqWfQKvu img {
+    height: 3.8rem !important;
+  }
+  .cid-rjjqWfQKvu .btn {
+    display: -webkit-flex;
+  }
+  .cid-rjjqWfQKvu button.navbar-toggler {
+    display: block;
+  }
+  .cid-rjjqWfQKvu .navbar-brand {
+    margin-left: 1rem !important;
+  }
+  .cid-rjjqWfQKvu .navbar-toggleable-sm {
+    flex-direction: column;
+    -webkit-flex-direction: column;
+  }
+  .cid-rjjqWfQKvu .navbar-collapse {
+    display: none !important;
+    padding-right: 0 !important;
+  }
+  .cid-rjjqWfQKvu .navbar-collapse.collapsing,
+  .cid-rjjqWfQKvu .navbar-collapse.show {
+    display: block !important;
+  }
+  .cid-rjjqWfQKvu .navbar-collapse.collapsing .navbar-nav,
+  .cid-rjjqWfQKvu .navbar-collapse.show .navbar-nav {
+    display: block;
+    text-align: center;
+  }
+  .cid-rjjqWfQKvu .navbar-collapse.collapsing .navbar-nav .nav-item,
+  .cid-rjjqWfQKvu .navbar-collapse.show .navbar-nav .nav-item {
+    clear: both;
+  }
+  .cid-rjjqWfQKvu .navbar-collapse.collapsing .navbar-buttons,
+  .cid-rjjqWfQKvu .navbar-collapse.show .navbar-buttons {
+    text-align: center;
+  }
+  .cid-rjjqWfQKvu .navbar-collapse.collapsing .navbar-buttons:last-child,
+  .cid-rjjqWfQKvu .navbar-collapse.show .navbar-buttons:last-child {
+    margin-bottom: 1rem;
+  }
+  .cid-rjjqWfQKvu .dropdown .dropdown-menu {
+    width: 100%;
+    text-align: center;
+    position: relative;
+    opacity: 0;
+    display: block;
+    height: 0;
+    visibility: hidden;
+    padding: 0;
+    transition-duration: .5s;
+    transition-property: opacity,padding,height;
+  }
+  .cid-rjjqWfQKvu .dropdown.open > .dropdown-menu {
+    position: relative;
+    opacity: 1;
+    height: auto;
+    padding: 1.4rem 0;
+    visibility: visible;
+  }
+  .cid-rjjqWfQKvu .dropdown .dropdown-submenu {
+    left: 0;
+    text-align: center;
+    width: 100%;
+  }
+  .cid-rjjqWfQKvu .dropdown .dropdown-toggle[data-toggle="dropdown-submenu"]::after {
+    margin-top: 0;
+    position: inherit;
+    right: 0;
+    top: 50%;
+    display: inline-block;
+    width: 0;
+    height: 0;
+    margin-left: .3em;
+    vertical-align: middle;
+    content: "";
+    border-top: .30em solid;
+    border-right: .30em solid transparent;
+    border-left: .30em solid transparent;
+  }
+}
+@media (min-width: 767px) {
+  .cid-rjjqWfQKvu .menu-logo {
+    flex-shrink: 0;
+    -webkit-flex-shrink: 0;
+  }
+}
+.cid-rjjqWfQKvu .navbar-collapse {
+  flex-basis: auto;
+  -webkit-flex-basis: auto;
+}
+.cid-rjjqWfQKvu .nav-link:hover,
+.cid-rjjqWfQKvu .dropdown-item:hover {
+  color: #767676 !important;
 }
